# docker-vim

./: .editorconfig  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  clean.yaml  dependabot-auto-merge.yaml  dependency-auto-review.yaml  dependency-update-review.yaml  main.yaml  pull-request-automation.yaml  rebuild.yaml
ci/: config.yaml  debian-versions.yaml  dpkg-versions-backport.yaml  dpkg-versions.yaml  requirements.txt
