[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[project]
classifiers = []
dynamic = ["dependencies", "version"]
name = "docker-vim"
description = "Docker image with vim and other tools."
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
